# USDT-Gold

./: .gitignore  Cargo.toml  README.md  package.json
.github/workflows/: release.yaml  test.yaml
scripts/: demo.sh  deploy.sh  upgrade.js
src/: lib.rs
