[package]
edition = "2018"
name = "tether_token"
version = "0.1.1"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-contract-standards = "4.0.0-pre.4"
near-sdk = {version = "4.0.0-pre.4", features = ["unstable"]}

[dev-dependencies]
near-sdk-sim = "4.0.0-pre.4"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
debug = false
lto = true
opt-level = "z"
panic = "abort"
# Opt in extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
